# generation-with-vqlatents

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt  train.py
configs/: train_celebahq256_ddpm_latent_edges.yaml  train_celebahq256_vqgan.yaml  train_celebahq256_vqvae.yaml  train_mnist_ddpm_latent.yaml  train_mnist_ddpm_latent_cond.yaml  train_mnist_ddpm_raw.yaml  train_mnist_ddpm_raw_cond.yaml  train_mnist_dsm_condrefine_latent.yaml  train_mnist_dsm_condrefine_raw.yaml  train_mnist_dsm_ncsnv2_latent.yaml  train_mnist_dsm_ncsnv2_raw.yaml  train_mnist_dsm_unet_latent.yaml  train_mnist_score_sde_ncsnv2_latent.yaml  train_mnist_score_sde_ncsnv2_raw.yaml  train_mnist_transformer_latent.yaml  train_mnist_vqvae.yaml  train_prior.yaml  train_vqvae.yaml
configs/model/: ddpm.yaml  ddpm_latent.yaml  ddpm_raw.yaml  dsm.yaml  dsm_condrefine_latent.yaml  dsm_condrefine_raw.yaml  dsm_ncsnv2_latent.yaml  dsm_ncsnv2_raw.yaml  dsm_unet_latent.yaml  dsm_unet_raw.yaml  score_sde.yaml  score_sde_ncsnv2_latent.yaml  score_sde_ncsnv2_raw.yaml  transformer_latent.yaml  transformer_prior.yaml  vqgan_256to64.yaml  vqvae.yaml  vqvae_256to64.yaml  vqvae_2downsampling.yaml
configs/trainer/: default.yaml
scripts/: celebahq_edge_extraction.py  compare_face_edge_extraction.py  get_c_factor.py  mnist_pairwise_distance.py
src/interfaces/: ddpm.py  ddpm_latent.py  ddpm_raw.py  ddpm_sample_fid.py  dsm.py  dsm_latent.py  dsm_raw.py  score_sde.py  score_sde_latent.py  score_sde_raw.py  transformer_latent.py  transformer_prior.py  vqgan.py  vqvae.py
src/modules/: sde.py  (+2 more)
(+41 files in other folders)
