[project]
name = "generation-with-vqlatents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "torchvision==0.23.0",
  "hydra-core==1.3.2",
  "omegaconf==2.3.0",
  "wandb==0.25.0",
  "tqdm==4.67.1",
  "pytorch-lightning==2.5.3",
  "einops==0.8.1",
  "scipy==1.13.1",
  "imageio==2.37.0",
  "imageio-ffmpeg==0.6.0",
  "matplotlib==3.10.6",
]

[dependency-groups]
dev = [
  "ipython==9.4.0",
  "ipdb==0.13.13",
  "jupyter==1.1.1",
  "black>=24.0.0",
  "flake8>=7.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }